--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
     flex-wrap: wrap;
     background-color: white;
+    font-family: Source Sans Pro;
 }
 
 .newspaper-container {
@@ -17,21 +18,33 @@ body {
 h1 {
     text-align: center;
     margin-left: 10px;
+    font-family: Abril Fatface;
+    letter-spacing: 0.01em;
 }
 
 h2 {
     margin-left: 10px;
+    font-family: Abril Fatface;
+    letter-spacing: 0.03em;
+}
+
+h4 {
+    font-family: Abril Fatface;
+    letter-spacing: 0.01em;
 }
 
 h5 {
     color: red;
     margin-left: 10px;
+    font-family: Abril Fatface;
+    letter-spacing: 0.05em;
 }
 
 ul {
     list-style: none;
     margin-left: -19px;
     margin-left: 10px;
+    
 }
 
 li {
@@ -77,3 +90,30 @@ nav {
 .main-img {
     margin-left: 10px;
 }
+
+@font-face {
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/robotoslab/v34/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjovoSmb2Rj.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+  @font-face {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3i94_wlBduz8A.woff2) format('woff2');
+    unicode-range: U+0370-0377, U+037A-037F, U+0384-038A, U+038C, U+038E-03A1, U+03A3-03FF;
+  }
+
+  @font-face {
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/abrilfatface/v23/zOL64pLDlL1D99S8g8PtiKchq-dmjQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
