--- a/style.css
+++ b/style.css
@@ -120,3 +120,39 @@ nav {
     src: url(https://fonts.gstatic.com/s/abrilfatface/v23/zOL64pLDlL1D99S8g8PtiKchq-dmjQ.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
+
+  #latte-img {
+    width: 160px;
+    height: 134px;
+  }
+
+  #code-img {
+    width: 180px;
+    height: 134px;
+  }
+
+  #coffee-code {
+    width: 200px;
+    height: 134px;
+  }
+
+  .more-articles-part-2 section{
+    display: inline-block;
+    width:340px;
+    text-align: center;
+    margin-left: 20px;
+  }
+
+  #fith-article section{
+    border-bottom: 1px solid#777;
+    justify-content: center;
+    margin-left: 25%;
+  }
+
+  .footer {
+    color:#777;
+    text-decoration: none;
+    font-size: smaller;
+    display: inline-block;
+    padding: 1px 1px 1px 10px;
+  }
